# Udemy_SelfDrivingAndRos2

./: README.md
bumperbot_ws/: 02_data_exchanger.md  03_bumperbot2.md  bumperbot.md  run_RVIZ.sh
bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_cpp_examples/src/: simple_publisher.cpp  simple_subscriber.cpp
bumperbot_ws/src/bumperbot_description/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro
bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.py
bumperbot_ws/src/bumperbot_py_examples/bumperbot_py_examples/: simple_publisher.py  simple_subscriber.py
bumperbot_ws/src/data_exchanger/: CMakeLists.txt  package.xml
bumperbot_ws/src/data_exchanger/include/: app_a.hpp  app_b.hpp
bumperbot_ws/src/data_exchanger/src/: app_a.cpp  app_b.cpp
docker/: Dockerfile  Dockerfile_Ubuntu24  build.sh  common.sh  into.sh  start.sh  stop.sh
